--- a/ui.scss
+++ b/ui.scss
@@ -9,9 +9,12 @@ body {
   padding-bottom: 20px;
 }
 
+$flagw: 180px;
+$flagh: 110px;  
+
 .flag {
-  width:180px;
-  height:110px;
+  width: $flagw;
+  height: $flagh;
   background-color:#fff;
   box-shadow:0 1px 2px rgba(black, 0.07);
   position: relative;
@@ -20,8 +23,126 @@ body {
   margin-bottom: 30px;
   border-radius:4px;
   overflow: hidden;
-  &:nth-child(4n+1) {
-    clear:both;
+}
+
+hr {
+  clear:both;
+  border:0 none;
+  border-top:dashed 1px #aaa;
+  margin: 30px 0;
+}
+
+@mixin lmr($cl: #fff, $cm: #fff, $cr: #fff) {
+  $w: $flagw / 3;
+  box-sizing: border-box;
+  border-left: solid $w $cl;
+  border-right: solid $w $cr;
+  background-color: $cm;
+}
+
+.flag.france {
+  @include lmr($cl: #002D67, $cr: #EF4135);
+}
+
+.flag.italy {
+  @include lmr($cl: #008D46, $cr: #D2232C);
+}
+
+.flag.belgium {
+  @include lmr($cl: #000000, $cm: #FFDE00, $cr: #EE0000);
+}
+
+.flag.nigeria {
+  @include lmr($cl: #008751, $cr: #008751);
+}
+
+.flag.cote {
+  @include lmr($cl: #F77F00, $cr: #009E60);
+}
+
+@mixin tmb($ct: #fff, $cm: #fff, $cb: #fff) {
+  $h: $flagh / 3;
+  box-sizing: border-box;
+  border-top: solid $h $ct;
+  border-bottom: solid $h $cb;
+  background-color: $cm;
+}
+
+.flag.germany {
+  @include tmb($ct: #000000, $cm: #ED1C24, $cb: #FFD900);
+}
+
+.flag.holland {
+  @include tmb($ct: #A20E23, $cb: #1F4085);
+}
+
+.flag.russia {
+  @include tmb($ct: #FFFFFF, $cm: #0000FF, $cb: #FF0000);
+}
+
+.flag.columbia {
+  @include tmb($ct: #FCD116, $cm: #003893, $cb: #CE1126);
+  border-top-width: $flagh / 2;
+  border-bottom-width: $flagh / 4;
+}
+
+.flag.england {
+  $w: $flagh / 5;
+  &:before {
+    content: "";
+    position: absolute;
+    top:($flagh - $w)/2;
+    height:$w;
+    left:0;right:0;
+    background-color: #CF142B;
+  }
+  &:after {
+    content: "";
+    position: absolute;
+    left:($flagw - $w)/2;
+    width: $w;
+    top:0;bottom:0;
+    background-color: #CF142B;
+  }
+}
+
+.flag.switzerland {
+  $w: $flagh / 5;
+  $w1: $w * 3.3;
+  background-color: #BD2925;
+  &:before {
+    content: "";
+    position: absolute;
+    top:($flagh - $w)/2;
+    height:$w;
+    left:($flagw - $w1)/2;
+    width:$w1;
+    background-color: #fff;
+  }
+  &:after {
+    content: "";
+    position: absolute;
+    top:($flagh - $w1)/2;
+    height: $w1;
+    left:($flagw - $w)/2;
+    width: $w;
+    background-color: #fff;
+  }
+}
+
+.flag.costarica {
+  background-color: #002B7F;
+  $w: $flagh / 6;
+
+  &:before {
+    content: "";
+    position: absolute;
+    top: $w;
+    bottom: $w;
+    left: 0; right: 0;
+    @include tmb($cm: #CE1126);
+    border-top-width: $w;
+    border-bottom-width: $w;
   }
 }
 
@@ -34,293 +155,63 @@ body {
     background-color:#BE0026;
     display: block;
     position: absolute;
-    top:(110px - $w)/2;
-    left:(180px - $w)/2; 
+    top:($flagh - $w)/2;
+    left:($flagw - $w)/2; 
     border-radius:$w;
   }
 }
 
-.flag.france {
-  &:before {
-    content: "";
-    display: block;
-    position: absolute;
-    top:0;left:0;bottom:0;
-    width:percentage(1/3);
-    background-color:#002D67;
-  }
-  &:after {
-    content: "";
-    display: block;
-    position: absolute;
-    top:0;right:0;bottom:0;
-    width:percentage(1/3);
-    background-color:#EF4135;
-  }
-}
-
-.flag.italy {
-  &:before {
-    content: "";
-    display: block;
-    position: absolute;
-    top:0;left:0;bottom:0;
-    width:percentage(1/3);
-    background-color:#008D46;
-  }
-  &:after {
-    content: "";
-    display: block;
-    position: absolute;
-    top:0;right:0;bottom:0;
-    width:percentage(1/3);
-    background-color:#D2232C;
-  }
-}
-
-.flag.belgium {
-  background-color:#FFDE00;
-  &:before {
-    content: "";
-    display: block;
-    position: absolute;
-    top:0;left:0;bottom:0;
-    width:percentage(1/3);
-    background-color:#000000;
-  }
-  &:after {
-    content: "";
-    display: block;
-    position: absolute;
-    top:0;right:0;bottom:0;
-    width:percentage(1/3);
-    background-color:#EE0000;
-  }
-}
-
-.flag.nigeria {
-  &:before {
-    content: "";
-    display: block;
-    position: absolute;
-    top:0;left:0;bottom:0;
-    width:percentage(1/3);
-    background-color:#008751;
-  }
-  &:after {
-    content: "";
-    display: block;
-    position: absolute;
-    top:0;right:0;bottom:0;
-    width:percentage(1/3);
-    background-color:#008751;
-  }
-}
-
-.flag.cote {
-  &:before {
-    content: "";
-    display: block;
-    position: absolute;
-    top:0;left:0;bottom:0;
-    width:percentage(1/3);
-    background-color:#F77F00;
-  }
-  &:after {
-    content: "";
-    display: block;
-    position: absolute;
-    top:0;right:0;bottom:0;
-    width:percentage(1/3);
-    background-color:#009E60;
-  }
-}
-
-.flag.germany {
-  background-color:#ED1C24;
-  &:before {
-    content: "";
-    display: block;
-    position: absolute;
-    top:0;left:0;right:0;
-    height:percentage(1/3);
-    background-color:#000000;
-  }
-  &:after {
-    content: "";
-    display: block;
-    position: absolute;
-    bottom:0;left:0;right:0;
-    height:percentage(1/3);
-    background-color:#FFD900;
-  }
-}
-
-.flag.holland {
-  &:before {
-    content: "";
-    display: block;
-    position: absolute;
-    top:0;left:0;right:0;
-    height:percentage(1/3);
-    background-color:#A20E23;
-  }
-  &:after {
-    content: "";
-    display: block;
-    position: absolute;
-    bottom:0;left:0;right:0;
-    height:percentage(1/3);
-    background-color:#1F4085;
-  }
-}
-
-.flag.russia {
-  background-color: #0000FF;
-  &:before {
-    content: "";
-    display: block;
-    position: absolute;
-    top:0;left:0;right:0;
-    height:percentage(1/3);
-    background-color:#FFFFFF;
-  }
-  &:after {
-    content: "";
-    display: block;
-    position: absolute;
-    bottom:0;left:0;right:0;
-    height:percentage(1/3);
-    background-color:#FF0000;
-  }
-}
-
-.flag.columbia {
-  background-color: #003893;
-  &:before {
-    content: "";
-    display: block;
-    position: absolute;
-    top:0;left:0;right:0;
-    height:percentage(1/2);
-    background-color:#FCD116;
-  }
-  &:after {
-    content: "";
-    display: block;
-    position: absolute;
-    bottom:0;left:0;right:0;
-    height:percentage(1/4);
-    background-color:#CE1126;
-  }
-}
-
-.flag.costarica {
-  &:before {
-    content: "";
-    display: block;
-    position: absolute;
-    top:0;left:0;right:0;
-    height:percentage(1/6);
-    background-color:#002B7F;
-  }
-  &:after {
-    content: "";
-    display: block;
-    position: absolute;
-    bottom:0;left:0;right:0;
-    height:percentage(1/6);
-    background-color:#002B7F;
-  }
-  .a {
-    position: absolute;
-    top:percentage(1/3);
-    bottom:percentage(1/3);
-    left:0;right:0;
-    background-color:#CE1126;
-  }
-}
-
-.flag.england {
-  $w:22px;
-  &:before {
-    content: "";
-    display: block;
-    position: absolute;
-    top:(110px - $w)/2;
-    height:$w;
-    left:0;right:0;
-    background-color: #CF142B;
-  }
-  &:after {
-    content: "";
-    display: block;
-    position: absolute;
-    left:(180px - $w)/2;
-    width: $w;
-    top:0;bottom:0;
-    background-color: #CF142B;
-  }
-}
-
-.flag.switzerland {
-  $w:22px;
-  $w1:$w*3.3;
-  background-color: #BD2925;
-  &:before {
-    content: "";
-    display: block;
-    position: absolute;
-    top:(110px - $w)/2;
-    height:$w;
-    left:(180px - $w1)/2;
-    width:$w1;
-    background-color: #fff;
-  }
-  &:after {
-    content: "";
-    display: block;
-    position: absolute;
-    top:(110px - $w1)/2;
-    height: $w1;
-    left:(180px - $w)/2;
-    width: $w;
-    background-color: #fff;
-  }
-}
 
 .flag.greece {
-  $w: 180px * 3/8;
-  $hs: 110px * 1/9;
-  $ws: $w / 4;
-  .a {
-    height:$hs;
-    background-color:#0061AA;
-    margin-bottom:$hs;
+  $w: $flagh / 9;
+  $a-width: $flagw * 3/8;
+  $a-height: $w * 5;
+  $w1: $w;
+
+  background-color: #0061AA;
+  &:before {
+    content: "";
+    position: absolute;
+    top: $w; height: $w * 3;
+    left:0; right: 0;
+    @include tmb($cm: #0061AA);
+    border-top-width: $w;
+    border-bottom-width: $w;
   }
-  .b {
-    background-color:#0061AA;
-    position:absolute;
+
+  &:after {
+    content: "";
+    position: absolute;
+    bottom: $w; height: $w * 3;
+    left:0; right: 0;
+    @include tmb($cm: #0061AA);
+    border-top-width: $w;
+    border-bottom-width: $w;
+  }
+
+  .a {
+    position: absolute;
     top:0;left:0;
-    width:$w;
-    height:$hs*5;
+    width: $a-width;
+    height: $a-height;
+    background-color: #0061AA;
+
     &:before {
-      content: "";
-      position: absolute;
-      top:50%;
+      content:"";position: absolute;
+      top: 50%;
+      height: $w1;
       left:0;right:0;
-      height:$ws;
-      margin-top:-$ws/2;
-      background-color:#fff;
-    }
-    &:after {
-      content: "";
-      position: absolute;
-      left:50%;
-      width:$ws;
-      top:0;bottom:0;
-      margin-left: -$ws/2;
       background-color: #FFF;
+      margin-top: -$w1/2;
+    }
+
+    &:after {
+      content:"";position: absolute;
+      left:50%;
+      width:$w1;
+      top:0;bottom:0;
+      background-color: #FFF;
+      margin-left: -$w1/2;
     }
   }
 }
