--- a/ui.css
+++ b/ui.css
@@ -223,6 +223,10 @@ body {
         margin-left: -285px;
         margin-top: 10.36475px;
         -webkit-transform: translate(14.68305px, -196.93016px) scale(0.05);
+        -moz-transform: translate(14.68305px, -196.93016px) scale(0.05);
+        -ms-transform: translate(14.68305px, -196.93016px) scale(0.05);
+        -o-transform: translate(14.68305px, -196.93016px) scale(0.05);
+        transform: translate(14.68305px, -196.93016px) scale(0.05);
         position: absolute;
         top: 40px;
         left: 15px; }
@@ -237,7 +241,11 @@ body {
           border-right: solid transparent 285.31695px;
           left: -394.29833px;
           top: -286.47451px;
-          -webkit-transform: rotate(72deg); }
+          -webkit-transform: rotate(72deg);
+          -moz-transform: rotate(72deg);
+          -ms-transform: rotate(72deg);
+          -o-transform: rotate(72deg);
+          transform: rotate(72deg); }
         .flags .f .flag.cameroon .a:after {
           content: "";
           position: absolute;
@@ -249,7 +257,11 @@ body {
           border-right: solid transparent 285.31695px;
           left: -176.33558px;
           top: -286.47451px;
-          -webkit-transform: rotate(-72deg); }
+          -webkit-transform: rotate(-72deg);
+          -moz-transform: rotate(-72deg);
+          -ms-transform: rotate(-72deg);
+          -o-transform: rotate(-72deg);
+          transform: rotate(-72deg); }
     .flags .f .flag.chile {
       box-sizing: border-box;
       border-bottom: solid 55px #d42e12; }
@@ -272,6 +284,10 @@ body {
         margin-left: -286.25px;
         margin-top: 9.50102px;
         -webkit-transform: translate(14.68305px, -197.79389px) scale(0.04583);
+        -moz-transform: translate(14.68305px, -197.79389px) scale(0.04583);
+        -ms-transform: translate(14.68305px, -197.79389px) scale(0.04583);
+        -o-transform: translate(14.68305px, -197.79389px) scale(0.04583);
+        transform: translate(14.68305px, -197.79389px) scale(0.04583);
         left: 13.75px;
         top: 13.75px; }
         .flags .f .flag.chile .a:before {
@@ -285,7 +301,11 @@ body {
           border-right: solid transparent 285.31695px;
           left: -394.29833px;
           top: -286.47451px;
-          -webkit-transform: rotate(72deg); }
+          -webkit-transform: rotate(72deg);
+          -moz-transform: rotate(72deg);
+          -ms-transform: rotate(72deg);
+          -o-transform: rotate(72deg);
+          transform: rotate(72deg); }
         .flags .f .flag.chile .a:after {
           content: "";
           position: absolute;
@@ -297,7 +317,11 @@ body {
           border-right: solid transparent 285.31695px;
           left: -176.33558px;
           top: -286.47451px;
-          -webkit-transform: rotate(-72deg); }
+          -webkit-transform: rotate(-72deg);
+          -moz-transform: rotate(-72deg);
+          -ms-transform: rotate(-72deg);
+          -o-transform: rotate(-72deg);
+          transform: rotate(-72deg); }
     .flags .f .flag.ghana {
       box-sizing: border-box;
       border-top: solid 36.66667px #ce1126;
@@ -313,6 +337,10 @@ body {
         margin-left: -279px;
         margin-top: 14.51064px;
         -webkit-transform: translate(14.68305px, -192.78426px) scale(0.07);
+        -moz-transform: translate(14.68305px, -192.78426px) scale(0.07);
+        -ms-transform: translate(14.68305px, -192.78426px) scale(0.07);
+        -o-transform: translate(14.68305px, -192.78426px) scale(0.07);
+        transform: translate(14.68305px, -192.78426px) scale(0.07);
         position: absolute;
         left: 69px; }
         .flags .f .flag.ghana .a:before {
@@ -326,7 +354,11 @@ body {
           border-right: solid transparent 285.31695px;
           left: -394.29833px;
           top: -286.47451px;
-          -webkit-transform: rotate(72deg); }
+          -webkit-transform: rotate(72deg);
+          -moz-transform: rotate(72deg);
+          -ms-transform: rotate(72deg);
+          -o-transform: rotate(72deg);
+          transform: rotate(72deg); }
         .flags .f .flag.ghana .a:after {
           content: "";
           position: absolute;
@@ -338,7 +370,11 @@ body {
           border-right: solid transparent 285.31695px;
           left: -176.33558px;
           top: -286.47451px;
-          -webkit-transform: rotate(-72deg); }
+          -webkit-transform: rotate(-72deg);
+          -moz-transform: rotate(-72deg);
+          -ms-transform: rotate(-72deg);
+          -o-transform: rotate(-72deg);
+          transform: rotate(-72deg); }
     .flags .f .flag.honduras {
       box-sizing: border-box;
       border-top: solid 36.66667px #0047ba;
@@ -354,6 +390,10 @@ body {
         margin-left: -293.5px;
         margin-top: 4.49139px;
         -webkit-transform: translate(14.68305px, -202.80351px) scale(0.02167);
+        -moz-transform: translate(14.68305px, -202.80351px) scale(0.02167);
+        -ms-transform: translate(14.68305px, -202.80351px) scale(0.02167);
+        -o-transform: translate(14.68305px, -202.80351px) scale(0.02167);
+        transform: translate(14.68305px, -202.80351px) scale(0.02167);
         position: absolute;
         left: 83.5px;
         top: 13px; }
@@ -368,7 +408,11 @@ body {
           border-right: solid transparent 285.31695px;
           left: -394.29833px;
           top: -286.47451px;
-          -webkit-transform: rotate(72deg); }
+          -webkit-transform: rotate(72deg);
+          -moz-transform: rotate(72deg);
+          -ms-transform: rotate(72deg);
+          -o-transform: rotate(72deg);
+          transform: rotate(72deg); }
         .flags .f .flag.honduras .a1:after {
           content: "";
           position: absolute;
@@ -380,7 +424,11 @@ body {
           border-right: solid transparent 285.31695px;
           left: -176.33558px;
           top: -286.47451px;
-          -webkit-transform: rotate(-72deg); }
+          -webkit-transform: rotate(-72deg);
+          -moz-transform: rotate(-72deg);
+          -ms-transform: rotate(-72deg);
+          -o-transform: rotate(-72deg);
+          transform: rotate(-72deg); }
       .flags .f .flag.honduras .a2 {
         width: 0px;
         height: 0px;
@@ -391,6 +439,10 @@ body {
         margin-left: -293.5px;
         margin-top: 4.49139px;
         -webkit-transform: translate(14.68305px, -202.80351px) scale(0.02167);
+        -moz-transform: translate(14.68305px, -202.80351px) scale(0.02167);
+        -ms-transform: translate(14.68305px, -202.80351px) scale(0.02167);
+        -o-transform: translate(14.68305px, -202.80351px) scale(0.02167);
+        transform: translate(14.68305px, -202.80351px) scale(0.02167);
         position: absolute;
         left: 53.5px;
         top: 6.5px; }
@@ -405,7 +457,11 @@ body {
           border-right: solid transparent 285.31695px;
           left: -394.29833px;
           top: -286.47451px;
-          -webkit-transform: rotate(72deg); }
+          -webkit-transform: rotate(72deg);
+          -moz-transform: rotate(72deg);
+          -ms-transform: rotate(72deg);
+          -o-transform: rotate(72deg);
+          transform: rotate(72deg); }
         .flags .f .flag.honduras .a2:after {
           content: "";
           position: absolute;
@@ -417,7 +473,11 @@ body {
           border-right: solid transparent 285.31695px;
           left: -176.33558px;
           top: -286.47451px;
-          -webkit-transform: rotate(-72deg); }
+          -webkit-transform: rotate(-72deg);
+          -moz-transform: rotate(-72deg);
+          -ms-transform: rotate(-72deg);
+          -o-transform: rotate(-72deg);
+          transform: rotate(-72deg); }
       .flags .f .flag.honduras .a3 {
         width: 0px;
         height: 0px;
@@ -428,6 +488,10 @@ body {
         margin-left: -293.5px;
         margin-top: 4.49139px;
         -webkit-transform: translate(14.68305px, -202.80351px) scale(0.02167);
+        -moz-transform: translate(14.68305px, -202.80351px) scale(0.02167);
+        -ms-transform: translate(14.68305px, -202.80351px) scale(0.02167);
+        -o-transform: translate(14.68305px, -202.80351px) scale(0.02167);
+        transform: translate(14.68305px, -202.80351px) scale(0.02167);
         position: absolute;
         left: 53.5px;
         top: 19.5px; }
@@ -442,7 +506,11 @@ body {
           border-right: solid transparent 285.31695px;
           left: -394.29833px;
           top: -286.47451px;
-          -webkit-transform: rotate(72deg); }
+          -webkit-transform: rotate(72deg);
+          -moz-transform: rotate(72deg);
+          -ms-transform: rotate(72deg);
+          -o-transform: rotate(72deg);
+          transform: rotate(72deg); }
         .flags .f .flag.honduras .a3:after {
           content: "";
           position: absolute;
@@ -454,7 +522,11 @@ body {
           border-right: solid transparent 285.31695px;
           left: -176.33558px;
           top: -286.47451px;
-          -webkit-transform: rotate(-72deg); }
+          -webkit-transform: rotate(-72deg);
+          -moz-transform: rotate(-72deg);
+          -ms-transform: rotate(-72deg);
+          -o-transform: rotate(-72deg);
+          transform: rotate(-72deg); }
       .flags .f .flag.honduras .a4 {
         width: 0px;
         height: 0px;
@@ -465,6 +537,10 @@ body {
         margin-left: -293.5px;
         margin-top: 4.49139px;
         -webkit-transform: translate(14.68305px, -202.80351px) scale(0.02167);
+        -moz-transform: translate(14.68305px, -202.80351px) scale(0.02167);
+        -ms-transform: translate(14.68305px, -202.80351px) scale(0.02167);
+        -o-transform: translate(14.68305px, -202.80351px) scale(0.02167);
+        transform: translate(14.68305px, -202.80351px) scale(0.02167);
         position: absolute;
         left: 113.5px;
         top: 6.5px; }
@@ -479,7 +555,11 @@ body {
           border-right: solid transparent 285.31695px;
           left: -394.29833px;
           top: -286.47451px;
-          -webkit-transform: rotate(72deg); }
+          -webkit-transform: rotate(72deg);
+          -moz-transform: rotate(72deg);
+          -ms-transform: rotate(72deg);
+          -o-transform: rotate(72deg);
+          transform: rotate(72deg); }
         .flags .f .flag.honduras .a4:after {
           content: "";
           position: absolute;
@@ -491,7 +571,11 @@ body {
           border-right: solid transparent 285.31695px;
           left: -176.33558px;
           top: -286.47451px;
-          -webkit-transform: rotate(-72deg); }
+          -webkit-transform: rotate(-72deg);
+          -moz-transform: rotate(-72deg);
+          -ms-transform: rotate(-72deg);
+          -o-transform: rotate(-72deg);
+          transform: rotate(-72deg); }
       .flags .f .flag.honduras .a5 {
         width: 0px;
         height: 0px;
@@ -502,6 +586,10 @@ body {
         margin-left: -293.5px;
         margin-top: 4.49139px;
         -webkit-transform: translate(14.68305px, -202.80351px) scale(0.02167);
+        -moz-transform: translate(14.68305px, -202.80351px) scale(0.02167);
+        -ms-transform: translate(14.68305px, -202.80351px) scale(0.02167);
+        -o-transform: translate(14.68305px, -202.80351px) scale(0.02167);
+        transform: translate(14.68305px, -202.80351px) scale(0.02167);
         position: absolute;
         left: 113.5px;
         top: 19.5px; }
@@ -516,7 +604,11 @@ body {
           border-right: solid transparent 285.31695px;
           left: -394.29833px;
           top: -286.47451px;
-          -webkit-transform: rotate(72deg); }
+          -webkit-transform: rotate(72deg);
+          -moz-transform: rotate(72deg);
+          -ms-transform: rotate(72deg);
+          -o-transform: rotate(72deg);
+          transform: rotate(72deg); }
         .flags .f .flag.honduras .a5:after {
           content: "";
           position: absolute;
@@ -528,7 +620,11 @@ body {
           border-right: solid transparent 285.31695px;
           left: -176.33558px;
           top: -286.47451px;
-          -webkit-transform: rotate(-72deg); }
+          -webkit-transform: rotate(-72deg);
+          -moz-transform: rotate(-72deg);
+          -ms-transform: rotate(-72deg);
+          -o-transform: rotate(-72deg);
+          transform: rotate(-72deg); }
 
 .starbox {
   width: 200px;
@@ -545,7 +641,11 @@ body {
   border-right: solid transparent 285.31695px;
   margin-left: -200px;
   margin-top: 69.0983px;
-  -webkit-transform: translate(14.68305px, -138.1966px) scale(0.33333); }
+  -webkit-transform: translate(14.68305px, -138.1966px) scale(0.33333);
+  -moz-transform: translate(14.68305px, -138.1966px) scale(0.33333);
+  -ms-transform: translate(14.68305px, -138.1966px) scale(0.33333);
+  -o-transform: translate(14.68305px, -138.1966px) scale(0.33333);
+  transform: translate(14.68305px, -138.1966px) scale(0.33333); }
   .star:before {
     content: "";
     position: absolute;
@@ -557,7 +657,11 @@ body {
     border-right: solid transparent 285.31695px;
     left: -394.29833px;
     top: -286.47451px;
-    -webkit-transform: rotate(72deg); }
+    -webkit-transform: rotate(72deg);
+    -moz-transform: rotate(72deg);
+    -ms-transform: rotate(72deg);
+    -o-transform: rotate(72deg);
+    transform: rotate(72deg); }
   .star:after {
     content: "";
     position: absolute;
@@ -569,7 +673,11 @@ body {
     border-right: solid transparent 285.31695px;
     left: -176.33558px;
     top: -286.47451px;
-    -webkit-transform: rotate(-72deg); }
+    -webkit-transform: rotate(-72deg);
+    -moz-transform: rotate(-72deg);
+    -ms-transform: rotate(-72deg);
+    -o-transform: rotate(-72deg);
+    transform: rotate(-72deg); }
 
 .star1 {
   width: 0px;
@@ -580,7 +688,11 @@ body {
   border-right: solid transparent 285.31695px;
   margin-left: -250px;
   margin-top: 34.54915px;
-  -webkit-transform: translate(14.68305px, -172.74575px) scale(0.16667); }
+  -webkit-transform: translate(14.68305px, -172.74575px) scale(0.16667);
+  -moz-transform: translate(14.68305px, -172.74575px) scale(0.16667);
+  -ms-transform: translate(14.68305px, -172.74575px) scale(0.16667);
+  -o-transform: translate(14.68305px, -172.74575px) scale(0.16667);
+  transform: translate(14.68305px, -172.74575px) scale(0.16667); }
   .star1:before {
     content: "";
     position: absolute;
@@ -592,7 +704,11 @@ body {
     border-right: solid transparent 285.31695px;
     left: -394.29833px;
     top: -286.47451px;
-    -webkit-transform: rotate(72deg); }
+    -webkit-transform: rotate(72deg);
+    -moz-transform: rotate(72deg);
+    -ms-transform: rotate(72deg);
+    -o-transform: rotate(72deg);
+    transform: rotate(72deg); }
   .star1:after {
     content: "";
     position: absolute;
@@ -604,4 +720,8 @@ body {
     border-right: solid transparent 285.31695px;
     left: -176.33558px;
     top: -286.47451px;
-    -webkit-transform: rotate(-72deg); }
+    -webkit-transform: rotate(-72deg);
+    -moz-transform: rotate(-72deg);
+    -ms-transform: rotate(-72deg);
+    -o-transform: rotate(-72deg);
+    transform: rotate(-72deg); }
